<resources>
    <string name="app_name">Persian Calendar</string>
    <string name="widget_name">Persian Calendar</string>
    <string name="widget_mini_name">Persian Calendar (mini)</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="gps_location_is_found">Latitude and Longitude successfully received, please exit without changes from the settings to be saved automatically!</string>
    <string name="gps_location_is_found_dialog">Latitude and Longitude successfully received.</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="enable_up_date">Fix the Islamic Calendar and other items from server automatically</string>
    <string name="up_date">Updating calendar information</string>
    <string name="summary_testament">Ability to see the will without the need to unlock the phone for relatives</string>
    <string name="title_testament">Ability to see the will</string>
    <string name="summary_testament_code">You can change the default secret code, which is 506</string>
    <string name="title_testament_code">Secret code for to see the will</string>
    <string name="enable_persian_digits">Enable Persian Digits</string>
    <string name="persian_digits">Persian Digits</string>
    <string name="showing_clock_on_widget">Show the clock on widget</string>
    <string name="clock_on_widget">Clock on the Widget</string>
    <string name="showing_clock_in_24">Show the clock in 24 hour</string>
    <string name="clock_in_24">Clock in 24 hour</string>
    <string name="about">About</string>
    <string name="prayer">Prayer</string>
    <string name="help">Help</string>
    <string name="ghaza">Ironically prayer</string>
    <string name="tasbihat">Tasbih</string>
    <string name="asmaallah">Names of God</string>
    <string name="todaydua">Today Dua</string>
    <string name="moslemzekr">Zekr Counter</string>
    <string name="gpl_logo">GPL Logo</string>
    <string name="widget_text_colors">Widget Text Colors</string>
    <string name="clock">Clock</string>
    <string name="date">Date</string>
    <string name="search">Search</string>
    <string name="date_converter">Date Converter</string>
    <string name="logo">Logo</string>
    <string name="dari_months">Dari Months</string>
    <string name="enable_dari">Enable Dari Months</string>
    <string name="widget_notification_dashclock">Widget, notification bar and DashClock</string>
    <string name="general">General</string>
    <string name="widget_text_color">Widget Text Color</string>
    <string name="select_widgets_text_color">Select custom color for widgets texts</string>
    <string name="pray_times_calculation_setting">Pray Times Calculation Setting</string>
    <string name="notify_date">Enable Date Notification</string>
    <string name="enable_notify">Persistent notification for all date types, needs device restart after turning it off</string>
    <string name="select_skin">Select a skin</string>
    <string name="skin">Skin</string>
    <string name="pray_methods">Calculation methods</string>
    <string name="pray_methods_calculation">Calculation methods for pray times and Qibla compass</string>
    <string name="altitude">Altitude</string>
    <string name="altitude_praytime">in meter (optional)</string>
    <string name="gps_location">Get location from GPS or network</string>
    <string name="gps_location_help">Other options are not needed if this is possible</string>
    <string name="internet_location_enable">Please turn on the Internet connection and Location!</string>
    <string name="location_enable">Please turn on the Location!</string>
    <string name="internet_enable">Please turn on the Internet connection!</string>
    <string name="location">Location</string>
    <string name="location_finder">Location Finder</string>
    <string name="location_help">If none of them, specify it below</string>
    <string name="showing_iran_time">Widgets and notifications in Iran TimeZone</string>
    <string name="iran_time">Iran Time</string>
    <string name="qibla_compass">Compass/Qibla</string>
    <string name="compass">Compass</string>
    <string name="set_location">Please first set location in the Settings…</string>
    <string name="compass_not_found">Compass sensor not found</string>
    <string name="whats_new">Whats New</string>
    <string name="notification_calendar">Calendar Notification</string>
    <string name="notification_calendar_desc">Calendar Notification Settings</string>
    <string name="phone_location_required">Phone, Location and Storage Services Permission required for this app, please grant permission.</string>
    <string name="toast_go_to_settings">Please go to settings and enable permissions!</string>
    <string name="calibrate_compass_title">Calibrating compass…</string>
    <string name="calibrate_compass_summary">The compass needs to be calibrated.\nMove away from any magnetic objects, Tilt and rotate the device back and forth on every axis as shown in the animation.</string>
    <string name="dont_show_again_dialog">Please do not show again.</string>
    <string name="calibrate_compass_dismiss">Dismiss</string>
    <string name="with_sensor">With Sensor</string>
    <string name="with_map">With Map</string>
    <string name="gps_internet_desc">Please Positioning (GPS) and the internet to find the direction of Mecca turn on.\nProgram need only once to access GPS and internet and ignore this message, but if you in new location access to GPS and internet is needed again.\nif they both have activated please exit here and reopen!</string>
    <string name="gprs_settings">GPRS</string>
    <string name="wifi_settings">WiFi</string>
    <string name="gps_settings">GPS</string>
    <string name="internet_settings">Internet</string>
    <string name="kaaba">Mecca (Kaaba)</string>
    <string name="you_location">Your current location for prayer</string>
    <string name="sobh">Morning</string>
    <string name="t_sobh">Prosecutions Prayer Morning</string>
    <string name="zohr">Midday</string>
    <string name="language">Language</string>
    <string name="athan">Athan</string>
    <string name="athan_alarm_summary">Prayers to trigger the alarm for</string>
    <string name="athan_alarm">Athan Alarm</string>
    <string name="athan_volume_summary">Set the volume for the alarm</string>
    <string name="athan_volume">Athan Volume</string>
    <string name="athan_gap">Athan Gap</string>
    <string name="athan_gap_summary">How long ahead of the Athan should the alarm be triggered (in minutes)</string>
    <string name="islamic_offset">Islamic offset</string>
    <string name="islamic_offset_summary">Back to calendar reform</string>
    <string name="why_0_0">• In some models of mobile phones have a feature "Power Saving", To fix this problem into the device battery settings and disable any restriction for the Persian Calendar.\n</string>
    <string name="why_0_1">• Make sure your device\'s clock is set based on the official clock, Otherwise into the device settings and set the date and time, turn off automatic mode and choose the time zone Iran or Tehran.\n</string>
    <string name="why_0_2">• If the athan play later to reduce it, Please enable GPS and Internet start Persian Calendar into (Settings> Get location from GPS or network) wait to done and exit settings now calculate prayer times based on your current location.\n</string>
    <string name="why_1_0">• If use the Smart Manager app or similar applications in the App Store\'s like Task Manager, Please remove Persian Calendar from the list of this apps.\n</string>
    <string name="why_1_1">• Android 6 or new versions is feature for improved battery life the name is Doze, please remove Persian Calendar from the list of Doze feature.\n</string>
    <string name="why_2_0">• Persian Calendar auto fix the problem if connecting to the Internet and run calendar to load from the server for correct the Islamic Calendar automatically.\n</string>
    <string name="why_2_1">• Because displacement in the months of Islamic Calendar interference 1 or 2 days, To fix this into (Settings> Islamic Calendar) set the correct amount.\n</string>
    <string name="why_3_0">• Please enable GPS and internet, start Persian Calendar into (Settings> Get location from GPS or network) and wait until the search for your current location to be done exit from settings.\n</string>
    <string name="why_4_0">• If you need to add a reminder you can search day for remind in Persian Calendar and with long touch on it you get to device calendar for add reminder.\n</string>
    <string name="why_5_0">• It may slow down the speed of Internet. Try use high-quality and high-speed Internet provider.\n</string>
    <string name="why_5_1">• Server may be difficult and important reason for the high traffic load on the server and for a short time service unavailable. Allow reduced traffic to a server and the server returns to previous state.\n</string>
    <string name="why_5_2">• If you don\'t like to update Persian Calendar settings for fix potential errors, You can disable it in the settings.\n</string>
    <string name="why_6_0">• Location Access: The Compass and Qibla Compass is required for access Persian Calendar to the geographical location and Qibla direction of your current location. Also handy to your current location in settings to calculate prayer times.\n</string>
    <string name="why_6_1">• Phone Access: This access makes Persian Calendar Athan while you use voice call not play.\n</string>
    <string name="why_6_2">• Storage Access: The access to display image on the splash for save it and not reload from the server again.\n</string>
    <string name="why_6_3">• SMS Access: This is the access to read incoming SMS. Persian Calendar display your will even when the device is locked.\n</string>
    <string name="why_6_4">• The explanations mentioned all access to the Persian Calendar is required and if one of them is not approved in the program will be interrupted.\n</string>
    <string name="why_7_0">• In Compass with sensor yellow circle is position of the sun and black and white circle is position of the moon.\n</string>
    <string name="why_7_1">• The red line showing the Qibla direction.\n</string>
    <string name="why_8_0">• In this section, you can calculate the one fifth amount of your capital into different categories, you should adding a capital to the rial.\n</string>
    <string name="why_8_1">• Due to the limitations in displaying the number of digits, the numbers are much larger or much smaller than the scientific symbol number. This type of display is used in most computing tools for very large or very small numbers. For example, the calculator display the number 1.23456e+14, which is 123.456 billion. That is, in the other words, the preceding E is multiplied by 10 and to the power of 14.\n</string>
    <string name="why_9_0">• My God grant you a lifetime. But in case of necessity, you may need to provide your will with all close relatives in different ways. By this section, you can easily do this.\n</string>
    <string name="why_9_1">• You can read the will in two ways.\nThe first method: You can see the will by writing the code *#*#506#*#* from left to right in dialer. But in some brands like samsungs this may not work, so use the second method.\nThe second method: You can also see the will by send SMS with 506 content in latin.\n</string>
    <string name="why_9_2">• You can choose an arbitrary number of 10 digits instead of the default number 506 for privacy in the settings and give the code to trust person.\n</string>
    <string name="add_capital">Add capital</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="hint_amount">Amount to rials</string>
    <string name="category">Category:</string>
</resources>